--- a/app/src/main/res/layout/fragment_transactions_reports.xml
+++ b/app/src/main/res/layout/fragment_transactions_reports.xml
@@ -336,7 +336,7 @@
                     android:layout_marginBottom="10dp">
 
                     <Button
-                        android:id="@+id/transactionSaveButton"
+                        android:id="@+id/newGoalSaveButton"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/roundstyle_gradient"
