--- a/app/src/main/res/layout/fragment_new_goals.xml
+++ b/app/src/main/res/layout/fragment_new_goals.xml
@@ -101,7 +101,7 @@
                                     <EditText
                                         android:id="@+id/nameNewGoalInput"
                                         android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
+                                        android:layout_height="50dp"
                                         android:ems="10"
                                         android:inputType="text"
                                         android:text="New Category"
