--- a/app/src/main/res/layout/fragment_goals.xml
+++ b/app/src/main/res/layout/fragment_goals.xml
@@ -101,7 +101,7 @@
                                     android:orientation="vertical">
 
                                     <TextView
-                                        android:id="@+id/textView3"
+                                        android:id="@+id/monthlyGoalView"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
                                         android:layout_marginBottom="10dp"
@@ -110,14 +110,31 @@
                                         android:textColor="@color/white" />
 
                                     <TextView
-                                        android:id="@+id/dateView"
+                                        android:id="@+id/minimumGoalTitle"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
-                                        android:text="TextView"
+                                        android:text="Minimum Goal"
                                         android:textColor="@color/ez_grey" />
 
                                     <TextView
-                                        android:id="@+id/textView5"
+                                        android:id="@+id/minimumGoalView"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:layout_weight="1"
+                                        android:text="TextView"
+                                        android:textColor="@color/white" />
+
+                                    <TextView
+                                        android:id="@+id/maximumGoalTitle"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content"
+                                        android:layout_marginTop="10dp"
+                                        android:layout_weight="1"
+                                        android:text="Maximum Goal"
+                                        android:textColor="@color/ez_grey" />
+
+                                    <TextView
+                                        android:id="@+id/maximumGoalView"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
                                         android:layout_weight="1"
