Update on Transactions

--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -32,6 +32,7 @@
                     android:layout_height="50dp"
                     android:background="@drawable/roundstyle_black"
                     android:scaleType="fitStart"
+                    android:contentDescription="@string/back_button_description"
                     android:src="@drawable/arrow_left" />
 
                 <TextView
