--- a/app/src/main/res/layout/fragment_transactions.xml
+++ b/app/src/main/res/layout/fragment_transactions.xml
@@ -118,12 +118,14 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:layout_marginTop="10dp"
+                                android:layout_marginRight="5dp"
                                 android:layout_weight="1"
                                 android:background="@drawable/border">
 
                                 <LinearLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
+                                    android:layout_marginLeft="5dp"
                                     android:orientation="horizontal">
 
                                     <FrameLayout
@@ -161,13 +163,11 @@
                                 </LinearLayout>
                             </FrameLayout>
 
-                            <Space
-                                android:layout_width="10dp"
-                                android:layout_height="match_parent" />
 
                             <FrameLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
+                                android:layout_marginLeft="5dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_weight="1"
                                 android:background="@drawable/border">
@@ -296,12 +296,18 @@
                                         android:text="Category"
                                         android:textColor="@color/ez_grey" />
 
+                                    <Spinner
+                                        android:id="@+id/CategorySpinnerInput"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="48dp" />
+
                                     <AutoCompleteTextView
                                         android:id="@+id/autoCompleteCategoryInput"
                                         android:layout_width="match_parent"
                                         android:layout_height="50dp"
                                         android:text="Enter Category"
                                         android:textColor="@color/white" />
+
                                 </LinearLayout>
                             </FrameLayout>
 
