--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -94,22 +94,6 @@
                                 android:layout_marginTop="10dp"
                                 android:layout_marginRight="15dp"
                                 android:layout_marginBottom="10dp"
-                                android:layout_weight="1">
-
-                                <ImageView
-                                    android:id="@+id/imageView"
-                                    android:layout_width="100dp"
-                                    android:layout_height="100dp"
-                                    android:layout_weight="1"
-                                    tools:src="@tools:sample/avatars" />
-                            </FrameLayout>
-
-                            <FrameLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="match_parent"
-                                android:layout_marginTop="10dp"
-                                android:layout_marginRight="15dp"
-                                android:layout_marginBottom="10dp"
                                 android:layout_weight="15">
 
                                 <LinearLayout
@@ -118,54 +102,33 @@
                                     android:orientation="vertical">
 
                                     <TextView
-                                        android:id="@+id/categoriesNameView"
+                                        android:id="@+id/transactionReportsCategoryView"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
-                                        android:layout_weight="1"
-                                        android:text="TextView"
+                                        android:text="textView"
                                         android:textColor="@color/white" />
 
                                     <TextView
-                                        android:id="@+id/categoriesBudgetView"
+                                        android:id="@+id/textView3"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
-                                        android:text="Budget"
+                                        android:layout_marginTop="10dp"
+                                        android:text="Total Expenses"
                                         android:textColor="@color/ez_grey" />
 
-                                    <FrameLayout
+                                    <TextView
+                                        android:id="@+id/transactionReportsTotalView"
                                         android:layout_width="match_parent"
                                         android:layout_height="wrap_content"
-                                        android:layout_weight="1">
-
-                                        <LinearLayout
-                                            android:layout_width="match_parent"
-                                            android:layout_height="match_parent"
-                                            android:orientation="horizontal">
-
-                                            <TextView
-                                                android:id="@+id/categoriesTotalBudgetView"
-                                                android:layout_width="wrap_content"
-                                                android:layout_height="wrap_content"
-                                                android:layout_weight="1"
-                                                android:text="TextView"
-                                                android:textColor="@color/white" />
-
-                                            <TextView
-                                                android:id="@+id/categoriesBudgetLimitView"
-                                                android:layout_width="wrap_content"
-                                                android:layout_height="wrap_content"
-                                                android:layout_weight="1"
-                                                android:text="TextView"
-                                                android:textColor="@color/white" />
-                                        </LinearLayout>
-
-                                    </FrameLayout>
+                                        android:text="textView"
+                                        android:textColor="@color/white" />
 
                                 </LinearLayout>
                             </FrameLayout>
 
                         </LinearLayout>
                     </FrameLayout>
+
                 </LinearLayout>
             </FrameLayout>
 
