--- a/app/src/main/res/layout/fragment_transactions_reports.xml
+++ b/app/src/main/res/layout/fragment_transactions_reports.xml
@@ -61,13 +61,15 @@
                     <FrameLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center|top">
+                        android:layout_gravity="center|top"
+                        android:visibility="gone">
 
                         <RadioGroup
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:checkedButton="@id/transactionGroup"
-                            android:orientation="horizontal">
+                            android:orientation="horizontal"
+                            android:visibility="gone">
 
                             <RadioButton
                                 android:id="@+id/transactionGroup"
@@ -132,13 +134,14 @@
                                                 android:textColor="@color/ez_grey" />
 
                                             <EditText
-                                                android:id="@+id/dateInput"
+                                                android:id="@+id/startDateTransaction"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="50dp"
                                                 android:ems="10"
+                                                android:hint="YYYY/MM/DD"
                                                 android:inputType="date"
-                                                android:text="Enter Date"
-                                                android:textColor="@color/white" />
+                                                android:textColor="@color/white"
+                                                android:textColorHint="@color/white" />
                                         </LinearLayout>
                                     </FrameLayout>
 
@@ -183,13 +186,14 @@
                                                 android:textColor="@color/ez_grey" />
 
                                             <EditText
-                                                android:id="@+id/editTextDate"
+                                                android:id="@+id/endDateTransaction"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="50dp"
                                                 android:ems="10"
+                                                android:hint="YYYY/MM/DD"
                                                 android:inputType="date"
-                                                android:text="Enter Date"
-                                                android:textColor="@color/white" />
+                                                android:textColor="@color/white"
+                                                android:textColorHint="@color/white" />
                                         </LinearLayout>
                                     </FrameLayout>
 
@@ -202,126 +206,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
-                        <ScrollView
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/recyclerTransactionReport"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent">
+                            android:layout_height="wrap_content" />
 
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="10dp"
-                                android:orientation="vertical">
-
-                                <FrameLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:layout_marginLeft="10dp"
-                                    android:layout_marginRight="10dp"
-                                    android:background="@drawable/border">
-
-                                    <LinearLayout
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent"
-                                        android:orientation="horizontal">
-
-                                        <FrameLayout
-                                            android:layout_width="wrap_content"
-                                            android:layout_height="match_parent"
-                                            android:layout_marginLeft="15dp"
-                                            android:layout_marginTop="10dp"
-                                            android:layout_marginBottom="10dp"
-                                            android:layout_weight="1">
-
-                                            <ImageView
-                                                android:id="@+id/imageView3"
-                                                android:layout_width="wrap_content"
-                                                android:layout_height="wrap_content"
-                                                android:layout_gravity="center"
-                                                tools:src="@tools:sample/avatars" />
-
-                                        </FrameLayout>
-
-                                        <FrameLayout
-                                            android:layout_width="wrap_content"
-                                            android:layout_height="match_parent"
-                                            android:layout_marginLeft="15dp"
-                                            android:layout_marginTop="10dp"
-                                            android:layout_marginRight="15dp"
-                                            android:layout_marginBottom="10dp"
-                                            android:layout_weight="15">
-
-                                            <LinearLayout
-                                                android:layout_width="match_parent"
-                                                android:layout_height="match_parent"
-                                                android:orientation="vertical">
-
-                                                <TextView
-                                                    android:id="@+id/textView12"
-                                                    android:layout_width="match_parent"
-                                                    android:layout_height="wrap_content"
-                                                    android:text="Description"
-                                                    android:textColor="@color/ez_grey" />
-
-                                                <TextView
-                                                    android:id="@+id/textView3"
-                                                    android:layout_width="match_parent"
-                                                    android:layout_height="wrap_content"
-                                                    android:text="TextView"
-                                                    android:textColor="@color/white" />
-
-                                                <TextView
-                                                    android:id="@+id/dateView"
-                                                    android:layout_width="match_parent"
-                                                    android:layout_height="wrap_content"
-                                                    android:layout_marginTop="10dp"
-                                                    android:text="Category"
-                                                    android:textColor="@color/ez_grey" />
-
-                                                <TextView
-                                                    android:id="@+id/textView5"
-                                                    android:layout_width="match_parent"
-                                                    android:layout_height="wrap_content"
-                                                    android:text="TextView"
-                                                    android:textColor="@color/white" />
-
-                                                <TextView
-                                                    android:id="@+id/textView4"
-                                                    android:layout_width="match_parent"
-                                                    android:layout_height="wrap_content"
-                                                    android:layout_marginTop="10dp"
-                                                    android:text="Date"
-                                                    android:textColor="@color/ez_grey" />
-
-                                                <TextView
-                                                    android:id="@+id/textView6"
-                                                    android:layout_width="match_parent"
-                                                    android:layout_height="wrap_content"
-                                                    android:text="TextView"
-                                                    android:textColor="@color/white" />
-
-                                                <TextView
-                                                    android:id="@+id/textView7"
-                                                    android:layout_width="match_parent"
-                                                    android:layout_height="wrap_content"
-                                                    android:layout_marginTop="10dp"
-                                                    android:text="Amount"
-                                                    android:textColor="@color/ez_grey" />
-
-                                                <TextView
-                                                    android:id="@+id/textView8"
-                                                    android:layout_width="match_parent"
-                                                    android:layout_height="wrap_content"
-                                                    android:text="TextView"
-                                                    android:textColor="@color/white" />
-
-                                            </LinearLayout>
-                                        </FrameLayout>
-
-                                    </LinearLayout>
-                                </FrameLayout>
-
-                            </LinearLayout>
-                        </ScrollView>
                     </FrameLayout>
 
                 </LinearLayout>
@@ -336,7 +225,7 @@
                     android:layout_marginBottom="10dp">
 
                     <Button
-                        android:id="@+id/newGoalSaveButton"
+                        android:id="@+id/searchTransactionButton"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/roundstyle_gradient"
