--- a/app/src/main/res/layout/fragment_new_categories.xml
+++ b/app/src/main/res/layout/fragment_new_categories.xml
@@ -118,47 +118,7 @@
                         android:layout_marginLeft="10dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginRight="10dp"
-                        android:background="@drawable/border">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="horizontal">
-
-                            <FrameLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="match_parent"
-                                android:layout_marginLeft="15dp"
-                                android:layout_marginTop="10dp"
-                                android:layout_marginRight="15dp"
-                                android:layout_marginBottom="10dp"
-                                android:layout_weight="15">
-
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:orientation="vertical">
-
-                                    <TextView
-                                        android:id="@+id/categoriesBudgetView"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:text="Budget"
-                                        android:textColor="@color/ez_grey" />
-
-                                    <EditText
-                                        android:id="@+id/categoriesBudgetInput"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:ems="10"
-                                        android:inputType="numberDecimal"
-                                        android:text="R 0.00"
-                                        android:textColor="@color/white" />
-                                </LinearLayout>
-                            </FrameLayout>
-
-                        </LinearLayout>
-                    </FrameLayout>
+                        android:background="@drawable/border"/>
 
                     <FrameLayout
                         android:layout_width="match_parent"
