--- a/app/src/main/res/layout/fragment_transactions.xml
+++ b/app/src/main/res/layout/fragment_transactions.xml
@@ -106,8 +106,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
-                       >
+                        android:layout_marginRight="10dp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -151,7 +150,9 @@
                                                 android:id="@+id/transactionDateInput"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="50dp"
+                                                android:clickable="true"
                                                 android:ems="10"
+                                                android:focusable="false"
                                                 android:hint="YYYY/MM/DD"
                                                 android:inputType="date"
                                                 android:textColor="@color/white"
@@ -205,7 +206,9 @@
                                                 android:layout_height="50dp"
                                                 android:ems="10"
                                                 android:hint="Enter Time"
-                                                android:inputType="time"
+                                                android:inputType="none"
+                                                android:focusable="false"
+                                                android:clickable="true"
                                                 android:textColor="@color/white"
                                                 android:textColorHint="@color/white" />
                                         </LinearLayout>
